# kalibr_ros2

./: .gitignore  README.md  kalibr_aprilgrid.yaml  kalibr_bmi270_imu.yaml
Schweizer-Messer/numpy_eigen/: CMakeLists.txt  package.xml
Schweizer-Messer/python_module/: CMakeLists.txt  package.xml
Schweizer-Messer/python_module/cmake/: add_python_export_library.cmake
Schweizer-Messer/sm_boost/: package.xml
Schweizer-Messer/sm_common/: package.xml
Schweizer-Messer/sm_eigen/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_kinematics/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_logging/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_matrix_archive/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_opencv/: package.xml
Schweizer-Messer/sm_property_tree/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_python/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_python/python/sm/: PlotCollection.py  __init__.py
Schweizer-Messer/sm_random/: package.xml
Schweizer-Messer/sm_timing/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras_april/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras_april/python/aslam_cameras_april/: __init__.py
aslam_cv/aslam_cv_backend/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_backend_python/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_error_terms/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_python/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_serialization/: CMakeLists.txt  package.xml
aslam_cv/aslam_imgproc/: CMakeLists.txt  package.xml
aslam_cv/aslam_time/: CMakeLists.txt  package.xml
aslam_incremental_calibration/incremental_calibration/: CMakeLists.txt  package.xml
aslam_incremental_calibration/incremental_calibration_python/: CMakeLists.txt  package.xml
aslam_incremental_calibration/incremental_calibration_python/python/incremental_calibration/: __init__.py
aslam_nonparametric_estimation/aslam_splines/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/aslam_splines_python/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/bsplines/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/bsplines_python/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/bsplines_python/src/: BSplinePython.cpp
aslam_offline_calibration/ethz_apriltag2/: package.xml
aslam_offline_calibration/kalibr2/: package.xml
aslam_offline_calibration/kalibr2_ros/: kalibr_rgb_config.yaml  kalibr_rgb_hq83_config.yaml  package.xml
aslam_offline_calibration/kalibr2_ros/include/kalibr2_ros/: Config.hpp
aslam_offline_calibration/kalibr2_ros/src/: CalibrateCameras.cpp  Config.cpp
aslam_offline_calibration/kalibr_errorterms/: CMakeLists.txt  package.xml
aslam_offline_calibration/kalibr_errorterms/python/kalibr_errorterms/: __init__.py
aslam_offline_calibration/kalibr_imu_ros2/: CMakeLists.txt  package.xml  setup.py
aslam_offline_calibration/kalibr_imu_ros2/kalibr_common/: ImageDatasetReader.py  ImuDatasetReader.py  TargetExtractor.py  __init__.py
aslam_offline_calibration/kalibr_imu_ros2/kalibr_imu_ros2/kalibr_common/: ImageDatasetReader.py  ImuDatasetReader.py
aslam_offline_calibration/kalibr_imu_ros2/kalibr_imu_ros2/kalibr_imu_camera_calibration/: IccSensors.py
aslam_offline_calibration/kalibr_imu_ros2/scripts/: kalibr_calibrate_imu_camera
aslam_offline_calibration/simple_graph/: package.xml
aslam_optimizer/aslam_backend/: CMakeLists.txt  package.xml
aslam_optimizer/aslam_backend_expressions/: CMakeLists.txt  package.xml
aslam_optimizer/aslam_backend_python/: CMakeLists.txt  package.xml
aslam_optimizer/sparse_block_matrix/: CMakeLists.txt  package.xml
calibration_results/: calibration_rgb_imx577.yaml  camchain_rgb_imx577.yaml  imu_camera_chain_rgb_bmi270.yaml  imu_camera_results.txt
devel/: ros2_workspace_checker.py
