<?xml version="1.0"?>
<package format="3">
  <name>numpy_eigen</name>
  <version>0.0.1</version>
  <description>NumPy to Eigen bridge for Python bindings</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>python_module</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>python3-numpy</build_depend>
  <exec_depend>python3-numpy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
