<?xml version="1.0"?>
<package format="3">
  <name>python_module</name>
  <version>0.0.1</version>
  <description>CMake helper to build Boost.Python extension modules for ROS2</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>python3-numpy</build_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
