<?xml version="1.0" encoding="utf-8"?>
<package format="3">
  <name>sm_matrix_archive</name>
  <version>0.0.1</version>
  <description>Matrix archive serialization utilities for Schweizer-Messer</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>sm_common</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>sm_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
