<?xml version="1.0" encoding="utf-8"?>
<package format="3">
  <name>aslam_cameras_april</name>
  <version>0.0.1</version>
  <description>aslam_cameras_april</description>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aslam_cameras</build_depend>
  <build_depend>ethz_apriltag2</build_depend>
  <build_depend>numpy_eigen</build_depend>
  <build_depend>python_module</build_depend>
  <build_depend>sm_boost</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>sm_logging</build_depend>
  <build_depend>sm_python</build_depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
