<?xml version="1.0" encoding="utf-8"?>
<package format="3">
  <name>aslam_cv_backend</name>
  <version>0.0.1</version>
  <description>aslam_cv_backend</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aslam_backend</build_depend>
  <build_depend>aslam_backend_expressions</build_depend>
  <build_depend>aslam_cameras</build_depend>
  <build_depend>aslam_time</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>sm_boost</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>sm_kinematics</build_depend>
  <build_depend>sm_logging</build_depend>
  <build_depend>sm_opencv</build_depend>
  <build_depend>sm_property_tree</build_depend>
  <build_depend>sm_timing</build_depend>
  <build_depend>sparse_block_matrix</build_depend>

  <build_depend>boost</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
