<?xml version="1.0"?>
<package format="3">
  <name>aslam_cv_backend_python</name>
  <version>0.0.1</version>
  <description>Python bindings for aslam_cv_backend calibration grid</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>python_module</build_depend>
  <build_depend>numpy_eigen</build_depend>
  <build_depend>sparse_block_matrix</build_depend>
  <build_depend>aslam_backend</build_depend>
  <build_depend>aslam_backend_expressions</build_depend>
  <build_depend>aslam_backend_python</build_depend>
  <build_depend>aslam_cameras</build_depend>
  <build_depend>aslam_cv_error_terms</build_depend>
  <build_depend>aslam_splines</build_depend>
  <build_depend>aslam_cv_python</build_depend>
  <build_depend>aslam_cv_backend</build_depend>
  <build_depend>aslam_time</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_python</build_depend>
  <build_depend>sm_opencv</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>python3-numpy</build_depend>
  <exec_depend>aslam_cv_backend</exec_depend>
  <exec_depend>aslam_backend_python</exec_depend>
  <exec_depend>aslam_cv_python</exec_depend>
  <build_depend>libopencv-dev</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
