<?xml version="1.0" encoding="utf-8"?>
<package format="3">
  <name>incremental_calibration</name>
  <version>0.0.1</version>
  <description>
    A C++-based library for calibrating robot sensors.
  </description>
  <maintainer email="jerome.maye@mavt.ethz.ch">Jerome Maye</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aslam_backend</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>tbb</build_depend>

  <exec_depend>aslam_backend</exec_depend>
  <exec_depend>sm_eigen</exec_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
