<?xml version="1.0" encoding="utf-8"?>
<package format="3">
  <name>bsplines</name>
  <version>0.0.1</version>
  <description>
     bsplines
  </description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>suitesparse</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>sm_kinematics</build_depend>
  <build_depend>sm_timing</build_depend>
  <build_depend>sparse_block_matrix</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
